# agent_auth_sdk

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  guidebook.md  pyproject.toml  req.txt
.github/workflows/: ci.yml  publish.yml  test-publish.yml
agent_auth/: __init__.py  _auth.py  _cli.py  _config.py  _errors.py  _identity.py  _protocol.py  _registry.py  _server.py  _state.py  _types.py  _vault.py
agent_auth_registry/: __init__.py  admin.py  app.py  run.py  storage.py
agent_auth_sdk/: __init__.py  agent.py  auth_context.py  cli.py  config.py  crypto.py  errors.py  http_utils.py  identity.py  keyring_support.py  messaging.py  metadata.py  models.py  observability.py  openai.py  openai_migration.py  publish.py  registry_client.py  registry_security.py  remote.py  signing.py  stores.py  vault.py  vault_kms.py  verification.py  verifier.py
agent_auth_sdk/integrations/: __init__.py  openai_agents.py  openai_facade.py  openai_fastapi.py
agent_identity_sdk/: __init__.py  agent.py  cli.py  config.py  crypto.py  errors.py  http_utils.py  messaging.py  metadata.py  models.py  publish.py  signing.py  stores.py  verification.py
deploy/: DEPLOY_BETA_V1.md  bootstrap_server.sh  deploy-registry.sh  nginx.agent-auth.conf  registry.env.example  registry.service  release_checklist.md
docs/: API_REFERENCE.md  CONFIGURATION.md  MIGRATION_0_2_TO_1_0.md  OPENAI_AGENTS.md  OPENAI_AGENTS_INTEGRATION.md  PROTOCOL_V1.md  REGISTRY_AGENT_JSON.md  REGISTRY_OPERATIONS.md  SDK_GUIDE.md  SECURITY_MODEL.md  VAULT_SETUP.md  protocol-v1-vectors.json
docs/diagrams/: sdk-current-sequence.puml  sdk-key-lifecycle-sequence.puml  sdk-key-rotation-sequence.puml  sdk-previous-2026-06-13-sequence.puml
examples/: README.md  __init__.py  _shared.py  key_lifecycle.py  local_http_signing.py  local_signed_message.py  openai_local.py  remote_client.py  remote_server.py  vault_registry.py  vault_registry_quickstart.py
examples/gateway/: __init__.py  app.py  audit.py  caller.py  llm_client.py  run.py
examples/openai_agents/: __init__.py  live_local.py  offline_local.py  remote_client.py  remote_server.py
examples/registry/: __init__.py  app.py  run.py
examples/remote_agent/: __init__.py  receiver.py  sender.py
legacy/typescript-prototype/: guidebook.md  package-lock.json  package.json  tsconfig.json
legacy/typescript-prototype/demos/: publisher-agent.ts  send-request.ts  shared.ts  verifier-agent.ts
legacy/typescript-prototype/src/: adapters.ts  auth.ts  crypto.ts  encoding.ts  identity.ts  index.ts  metadata.ts  nonce.ts  types.ts
legacy/typescript-prototype/tests/: sdk.test.ts
pytests/: conftest.py  test_auth.py  test_cli_operations.py  test_config_and_cli.py  test_examples_and_docs.py  test_gateway_e2e.py  test_openai_agents_contract.py  test_openai_agents_integration.py  test_openai_contract.py  test_openai_facade.py  test_protocol.py  test_protocol_vectors.py  test_registry.py  test_registry_client.py  test_release_contract.py  test_sdk_integration.py  test_sdk_unit.py  test_security_core_coverage.py  test_security_regressions.py  test_vault.py
runtime/: audit.sqlite3  metadata_cache.sqlite3  test_metadata_cache.sqlite3
runtime/.well-known/: agent.json
runtime/keys/: private_key.pem  public_key.base64url  public_key.pem
runtime/keys-test/: private_key.pem  public_key.base64url  public_key.pem
runtime/well-known/.well-known/: agent.json
