[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "agent-auth-sdk"
version = "1.0.0b1"
description = "Python SDK for agent identity publishing, signed messaging, and registry-based verification"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Yihe Huang" }
]
maintainers = [
  { name = "Yihe Huang" }
]
keywords = ["agent", "authentication", "identity", "signature", "registry", "a2a"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "redis>=5.0.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[project.scripts]
agent-auth-sdk = "agent_auth_sdk.cli:app"
agent-auth-registry = "agent_auth_registry.run:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_auth_sdk", "agent_auth_registry"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["pytests"]

