[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "verifiable-agent-auth-sdk"
version = "1.1.0"
description = "Python SDK for agent identity publishing, signed messaging, and registry-based verification"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Yihe Huang" }
]
maintainers = [
  { name = "Yihe Huang" }
]
keywords = ["agent", "authentication", "identity", "signature", "registry", "a2a"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "cryptography>=43.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
openai = ["openai-agents>=0.18.2,<0.19"]
server = ["openai-agents>=0.18.2,<0.19", "fastapi>=0.115.0"]
all = ["openai-agents>=0.18.2,<0.19", "fastapi>=0.115.0"]
dev = [
  "build>=1.2.0",
  "mypy>=1.11.0",
  "pip-audit>=2.7.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/YiheHuang/agent_auth_sdk"
Source = "https://github.com/YiheHuang/agent_auth_sdk"
Issues = "https://github.com/YiheHuang/agent_auth_sdk/issues"
Documentation = "https://github.com/YiheHuang/agent_auth_sdk/blob/main/QUICKSTART.md"
Changelog = "https://github.com/YiheHuang/agent_auth_sdk/blob/main/CHANGELOG.md"
Security = "https://github.com/YiheHuang/agent_auth_sdk/blob/main/SECURITY.md"

[project.scripts]
agent-auth = "agent_auth._cli:main"

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["agent_auth"]

[tool.hatch.build.targets.sdist]
include = [
  "/agent_auth",
  "/examples",
  "/docs",
  "/deploy",
  "/CHANGELOG.md",
  "/LICENSE",
  "/QUICKSTART.md",
  "/README.md",
  "/RELEASE.md",
  "/SECURITY.md",
  "/pyproject.toml",
]
exclude = [
  "/.gitignore",
  ".gitignore",
  "/docs/diagrams/*previous*",
  "/runtime",
  "/next_step",
  "/.pkg-audit",
  "/.pytest_cache",
]

[tool.pytest.ini_options]
pythonpath = [".", "packages/agent-auth-registry/src"]
testpaths = ["pytests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

